--- a/package.json
+++ b/package.json
@@ -5,5 +5,118 @@
   "main": "index.js",
   "repository": "git@github.com:Aaaaash/sumi-collaboration.git",
   "author": "大表哥 <binshao54@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "postinstall": "npm run prepare",
+    "download:extensions": "node scripts/download.js",
+    "start:client": "NODE_ENV=development webpack-dev-server --config ./example/configs/webpack.browser.config.js --progress --color --watch",
+    "start:webview": "webpack-dev-server --config ./example/configs/webpack.webview.config.js",
+    "start:server": "EXT_MODE=js KTLOG_SHOW_DEBUG=1 node --inspect=9991 -r ts-node/register -r tsconfig-paths/register ./example/src/node/index.ts",
+    "compile:worker-host": "NODE_ENV=production webpack --config ./example/configs/webpack.worker-host.config.js --progress --color",
+    "compile:ext-host": "NODE_ENV=production webpack --config ./example/configs/webpack.ext-host.config.js --progress --color",
+    "prepare": "npm run compile:worker-host && npm run compile:ext-host && DEBUG=install-ext npm run download:extensions",
+    "startup": "run-p start:client start:server start:webview",
+    "watch": "tsc -p ./tsconfig.json"
+  },
+  "files": [
+    "./lib"
+  ],
+  "dependencies": {
+    "@opensumi/ide-core-browser": "^2.13.4",
+    "@opensumi/ide-core-common": "^2.13.4",
+    "@opensumi/ide-core-node": "^2.13.4"
+  },
+  "devDependencies": {
+    "@opensumi/ide-addons": "^2.13.0",
+    "@opensumi/ide-comments": "^2.13.0",
+    "@opensumi/ide-debug": "^2.13.0",
+    "@opensumi/ide-decoration": "^2.13.0",
+    "@opensumi/ide-editor": "^2.13.0",
+    "@opensumi/ide-explorer": "^2.13.0",
+    "@opensumi/ide-express-file-server": "^2.13.0",
+    "@opensumi/ide-extension": "^2.13.0",
+    "@opensumi/ide-extension-manager": "^2.13.0",
+    "@opensumi/ide-extension-storage": "^2.13.0",
+    "@opensumi/ide-file-scheme": "^2.13.0",
+    "@opensumi/ide-file-search": "^2.13.0",
+    "@opensumi/ide-file-service": "^2.13.0",
+    "@opensumi/ide-file-tree-next": "^2.13.0",
+    "@opensumi/ide-i18n": "^2.13.0",
+    "@opensumi/ide-keymaps": "^2.13.0",
+    "@opensumi/ide-logs": "^2.13.0",
+    "@opensumi/ide-main-layout": "^2.13.0",
+    "@opensumi/ide-markdown": "^2.13.0",
+    "@opensumi/ide-markers": "^2.13.0",
+    "@opensumi/ide-menu-bar": "^2.13.0",
+    "@opensumi/ide-monaco": "^2.13.0",
+    "@opensumi/ide-monaco-enhance": "^2.13.0",
+    "@opensumi/ide-opened-editor": "^2.13.0",
+    "@opensumi/ide-outline": "^2.13.0",
+    "@opensumi/ide-output": "^2.13.0",
+    "@opensumi/ide-overlay": "^2.13.0",
+    "@opensumi/ide-preferences": "^2.13.0",
+    "@opensumi/ide-process": "^2.13.0",
+    "@opensumi/ide-quick-open": "^2.13.0",
+    "@opensumi/ide-scm": "^2.13.0",
+    "@opensumi/ide-search": "^2.13.0",
+    "@opensumi/ide-startup": "^2.13.0",
+    "@opensumi/ide-static-resource": "^2.13.0",
+    "@opensumi/ide-status-bar": "^2.13.0",
+    "@opensumi/ide-storage": "^2.13.0",
+    "@opensumi/ide-task": "^2.13.0",
+    "@opensumi/ide-terminal-next": "^2.13.0",
+    "@opensumi/ide-theme": "^2.13.0",
+    "@opensumi/ide-toolbar": "^2.13.0",
+    "@opensumi/ide-userstorage": "^2.13.0",
+    "@opensumi/ide-variable": "^2.13.0",
+    "@opensumi/ide-webview": "^2.13.0",
+    "@opensumi/ide-workspace": "^2.13.0",
+    "@opensumi/ide-workspace-edit": "^2.13.0",
+    "koa-static": "^5.0.0",
+    "@types/koa-static": "^4.0.2",
+    "await-event": "^2.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "compression": "^1.7.4",
+    "copy-webpack-plugin": "^5.0.3",
+    "css-loader": "^2.1.1",
+    "debug": "^4.3.3",
+    "execa": "^1.0.0",
+    "file-loader": "^3.0.1",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "fs-extra": "^10.0.0",
+    "got": "^11.8.3",
+    "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^1.0.4",
+    "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
+    "less": "^3.9.0",
+    "less-loader": "^6.0.0",
+    "mini-css-extract-plugin": "^0.6.0",
+    "mkdirp": "^1.0.4",
+    "mobx": "^5.9.4",
+    "mobx-react-lite": "^1.3.1",
+    "npm-run": "^5.0.1",
+    "npm-run-all": "^4.1.5",
+    "null-loader": "^4.0.1",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "p-map": "^3.0.0",
+    "react-dom": "^16.8.6",
+    "rimraf": "^3.0.2",
+    "serviceworker-webpack-plugin": "^1.0.1",
+    "style-loader": "^0.23.1",
+    "style-resources-loader": "^1.2.1",
+    "terser-webpack-plugin": "^2.3.1",
+    "ts-loader": "^6.0.1",
+    "ts-node": "8.0.2",
+    "tsconfig-paths": "^3.8.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "typescript": "^4.5.4",
+    "urllib": "^2.38.0",
+    "uuid": "^8.3.2",
+    "webpack": "4.39.3",
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "^3.8.0",
+    "yauzl": "^2.10.0"
+  }
 }
